Hello world selenium test

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -2,4 +2,4 @@
   <meta charset="UTF-8">
   <title>Add CSS and JS to Thymeleaf</title>
   <link th:href="@{/main.css}" rel="stylesheet" />
-</head>
+</head>[
