Improving themyleaf UI  - adding labels to form  - adding New product link  - moving navigation bar to the top of the page

--- a/src/main/resources/templates/product-detail.html
+++ b/src/main/resources/templates/product-detail.html
@@ -2,13 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head ::htmlHead"></head>
 <body>
-<h2>Product list</h2>
 <div th:replace="fragments/navigation ::navbar"></div>
+<h2>Product list</h2>
 
 <section>
 
   <h3 th:text="${product.productName}"></h3>
+  <h4>Product description</h4>
   <p th:text="${product.description}"></p>
+  <h4>Product image</h4>
   <img th:if="${product.pathToImage != null}" th:src="@{/images/{path} (path=${product.pathToImage})}" width="100" >
 
 
