--- a/src/main/resources/templates/product-form.html
+++ b/src/main/resources/templates/product-form.html
@@ -3,17 +3,17 @@
 <head th:replace="fragments/head ::htmlHead"></head>
 
 <body>
-<h2>Add product</h2>
 <div th:replace="fragments/navigation ::navbar"></div>
+<h2>Add product</h2>
 
 <section>
 
   <form action="#" th:action="@{/product-form-process}"
         th:object="${product}" method="post" enctype="multipart/form-data">
     <input type="hidden" th:field="*{id}" />
-    <input type="text" th:field="*{productName}" />
-    <textarea th:field="*{description}" ></textarea>
-    <input type="file" th:field="*{image}" />
+    <b>Name:</b> <input type="text" th:field="*{productName}" /><br>
+    <b>Description:</b> <textarea th:field="*{description}" ></textarea><br>
+    <b>Image:</b> <input type="file" th:field="*{image}" /><br>
     <input type="submit" />
 
   </form>
