--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -1,6 +1,8 @@
 <nav th:fragment="navbar" xmlns:th="http://www.thymeleaf.org">
 
-  <a th:href="@{'/'}">Product list</a>
-  <a th:href="@{'/shopping-cart'}">Shopping cart</a>
+  <a th:href="@{'/'}">Product list</a> &nbsp;|&nbsp;
+  <a th:href="@{'/shopping-cart'}">Shopping cart</a> &nbsp;|&nbsp;
+  <a th:href="@{'/product-form'}">Add new product</a>
+  <hr>
 
 </nav>
