--- a/src/main/resources/templates/shopping-cart.html
+++ b/src/main/resources/templates/shopping-cart.html
@@ -3,8 +3,8 @@
 <head th:replace="fragments/head ::htmlHead"></head>
 
 <body>
-<h2>Product list</h2>
 <div th:replace="fragments/navigation ::navbar"></div>
+<h2>Shopping cart</h2>
 
 <section>
 
